<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_header"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginBottom="100dp"
        android:background="@android:color/holo_blue_light"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="@string/drug_details"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_drugName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/drug_name"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText_drugName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:drawable/editbox_background"
        android:editable="false"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView_drugDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/drug_description"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText_drugDescriptiom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView_drugPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/drug_price"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText_drugPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:inputType="textPersonName" />
</LinearLayout>
